# pybind11-example

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.cpp
src/pybind11_example/: __init__.py
tests/: test_core.py  test_pybind11_example.py
